--- a/templates/reports/projects.html
+++ b/templates/reports/projects.html
@@ -18,6 +18,23 @@
 		<h3 class="text-muted">
 				Projects
 		</h3>
+		{% for message in messages %}
+
+            {% if 'safe' in message.tags %}
+            <script type="text/javascript">
+               // ToastrNotificationCall()
+            </script>
+                <div class="alert {{ message.tags }} alert-dismissable" style="color:red;" id="return_message" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>{{ message|safe }}</div>
+
+            {% else %}
+                <div class="alert {{ message.tags }} alert-dismissable" style="color:red;" id="return_message" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>{{ message }}</div>
+
+
+            {% endif %}
+
+        {% endfor %}
 			
 		{%if projects%}
 			<ul>
@@ -31,5 +48,22 @@
 		{% else %}
 			No project exist
 		{% endif %}
+
+		<div class="row">
+			<div class="col-md-12">
+				<form method="post" class="form-horizontal" action="{% url 'upload_file' %}" enctype="multipart/form-data">
+				{% csrf_token%}
+					<div class="form-group">
+
+                        <label class="col-sm-3 control-label"><label> Upload Excel file</label> </label>
+
+                        <div class="col-sm-6">
+                            <input type="file" required title="If you are not download the file please download excel from above" name="project_info_excel">xls,xlsx
+                            <input type="submit" class="btn btn-success" value="upload" name="upload">
+                        </div>
+                    </div>
+				</form>
+			</div>
+		</div>
 	</body>
 </html
