changed to new coding style

--- a/templates/project/project_details.html
+++ b/templates/project/project_details.html
@@ -27,7 +27,7 @@
 			<h4 class="text-muted">
 				Overview
 			</h4>
-				{{project.detailed_description | safe}}
+				{{project.detailed_description}}
 
 			<dl class="dl-horizontal">
 				<dt>
@@ -43,7 +43,6 @@
 					{{project.end_date}}
 
 				</dd>
-				d
 			</dl>
 		</div>
 	</div>
