--- a/templates/project/project_details.html
+++ b/templates/project/project_details.html
@@ -18,7 +18,7 @@
 
 
 
-    <div class="container-fluid">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<h3 class="text-center text-primary">
@@ -45,6 +45,15 @@
 				</dd>
 			</dl>
 		</div>
+	</div>
+	<div class="row">
+		<form class="form-inline">
+
+		  	    <span class="btn btn-default btn-file"><input id="new_attachment" name="pdf_attachment" type="file">
+			    </span>PDF
+		  	
+		  	<button type="submit" class="btn btn-default">Save</button>
+		</form>
 	</div>
 </div>
 
