--- a/templates/project/project_list.html
+++ b/templates/project/project_list.html
@@ -18,9 +18,13 @@
 		<h3 class="text-muted">
 				Projects
 		</h3>
-		
+		<div class="row">
+			<div class="col-md-offset-8 col-md-4"><a href="" class="btn btn-primary">New Project</a></div>
+		</div>
+		<p></p>
 			
 		{%if projects%}
+		<div class="row">
 			<table class="table table-striped table-bordered table-hover dataTable no-foote">
 				<tr>
 					<th>Project Name</th>
@@ -40,6 +44,7 @@
 					</tr>
 				{% endfor %}
 			</table>
+		</div>
 		{% else %}
 			No project exist
 		{% endif %}
