--- a/templates/project/project_details.html
+++ b/templates/project/project_details.html
@@ -46,15 +46,72 @@
 			</dl>
 		</div>
 	</div>
+	{% if attachment %}
+		<div class="row">
+			<div class="col-md-12">
+			<iframe id="fred" style="border:1px solid #666CCC" title="PDF in an i-Frame" src="{{attachment.file.url}}" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
+			<!--<iframe src="http://docs.google.com/gview?url=http://www.cdc.gov/nchs/icd/data/mgmt_plan.docx&embedded=true" 
+style="width:600px; height:500px;" frameborder="0"></iframe> -->
+
+				
+		    </div>
+
+
+			
+		</div>
+
+	{% endif %}
 	<div class="row">
-		<form class="form-inline">
+	    <h4>Comments</h4>
+
+		<div class="col-md-12">
+			<ul class="list-group">
+
+				{% for comment in  comments %}
+
+					  <li class="list-group-item {% cycle 'list-group-item-success' 'list-group-item-info' %}">{{comment.subject}}
+						  <ul class="list-group">
+						  	<li class="list-group-item">{{comment.description}}	</li>
+						  </ul>
+					  </li>
+
+				
+				{% endfor %}
+			</ul>
+		</div>
+	    <form class="form-horizontal" role="form" action="." method="post">
+	        {% csrf_token %}
+	        <div class="form-group">
+	            <label class="control-label col-sm-2" for="subject">Subject:</label>
+	            <div class="col-sm-10">
+	                <input type="text" name="subject" class="form-control" id="subject" placeholder="Subject">
+	            </div>
+	        </div>
+	        <div class="form-group">
+	            <label class="control-label col-sm-2" for="dic">Comment</label>
+	            <div class="col-sm-10">
+	                <textarea id="dic" class="form-control" placeholder="comment" name="comment"></textarea>
+	            </div>
+	        </div>
+	        <div class="form-group">
+	            <div class="col-sm-offset-2 col-sm-10">
+	                <button type="submit" class="btn btn-default">Submit</button>
+	            </div>
+	        </div>
+	    </form>
+
+
+	</div>
+	<div class="row">
+		<!--<form class="form-inline">
 
 		  	    <span class="btn btn-default btn-file"><input id="new_attachment" name="pdf_attachment" type="file">
 			    </span>PDF
 		  	
 		  	<button type="submit" class="btn btn-default">Save</button>
-		</form>
+		</form> -->
 	</div>
+	
 </div>
 
     <script src="/static/core/js/jquery.min.js"></script>
