--- a/templates/project/project_list.html
+++ b/templates/project/project_list.html
@@ -19,31 +19,33 @@
 				Projects
 		</h3>
 		<div class="row">
-			<div class="col-md-offset-8 col-md-4"><a href="" class="btn btn-primary">New Project</a></div>
+			<!--<div class="col-md-offset-8 col-md-4"><a href="" class="btn btn-primary">New Project</a></div> -->
 		</div>
 		<p></p>
 			
 		{%if projects%}
 		<div class="row">
-			<table class="table table-striped table-bordered table-hover dataTable no-foote">
-				<tr>
-					<th>Project Name</th>
-					<th>Start Date</th>
-					<th>End Date</th>
-					<th>Download</th>
-				</tr>
-				{% for project in projects %}
+			<div class="col-md-12">
+				<table class="table table-striped table-bordered table-hover dataTable no-foote">
 					<tr>
-						<td><a href="{% url 'project_detail' project.pk %}">{{project.title}}</a></td>
-						<td>{{project.start_date}}</td>
-						<td>{{project.end_date}}</td>
-						<td><a href="{% url 'download_project' project.pk 'pdf' %}">PDF</a>|
-							<a href="{% url 'download_project' project.pk 'word' %}">Word</a>|
-							<a href="{% url 'download_project' project.pk 'excel' %}">Excel</a>
-						</td>
+						<th>Project Name</th>
+						<th>Start Date</th>
+						<th>End Date</th>
+						<th>Download</th>
 					</tr>
-				{% endfor %}
-			</table>
+					{% for project in projects %}
+						<tr>
+							<td><a href="{% url 'project_detail' project.pk %}">{{project.title}}</a></td>
+							<td>{{project.start_date}}</td>
+							<td>{{project.end_date}}</td>
+							<td><a href="{% url 'download_project' project.pk 'pdf' %}">PDF</a>|
+								<a href="{% url 'download_project' project.pk 'word' %}">Word</a>|
+								<a href="{% url 'download_project' project.pk 'excel' %}">Excel</a>
+							</td>
+						</tr>
+					{% endfor %}
+				</table>
+			</div>
 		</div>
 		{% else %}
 			No project exist
