--- a/crewoo/templates/pages/home.html
+++ b/crewoo/templates/pages/home.html
@@ -54,7 +54,7 @@
                 <span class="icon-bar"></span>
               </button>
               <div class="navbar-brand-wrap">
-                <a class="navbar-brand" href="index.html#">
+                <a class="navbar-brand" href="#">
                   <img src="{% static 'home/assets/img/site-header-logo.png' %}" alt="">
                 </a>
               </div>
@@ -62,13 +62,13 @@
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="index.html#home">Home</a></li>
-                <li><a href="index.html#about">About</a></li>
-                <li><a href="index.html#brief_1">Brief</a></li>
-                <li><a href="index.html#pricing">Pricing</a></li>
-                <li><a href="index.html#download">Download</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
-                <li class="audio-toggle"><a href="index.html#"><i class="fa fa-volume-up"></i></a></li>
+                <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#brief_1">Brief</a></li>
+                <li><a href="#pricing">Pricing</a></li>
+                <li><a href="#download">Download</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li class="audio-toggle"><a href="#"><i class="fa fa-volume-up"></i></a></li>
               </ul>
             </div> <!-- .navbar-collapse -->
           </div>
@@ -94,8 +94,8 @@
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
                   </div> <!-- .section-heading -->
                   <div class="section-content">
-                    <a class="btn btn-pink m-y-5" href="index.html#about">Learn More</a>
-                    <a class="btn btn-warning m-y-5" href="index.html#download">Get The App</a>
+                    <a class="btn btn-pink m-y-5" href="#about">Learn More</a>
+                    <a class="btn btn-warning m-y-5" href="#download">Get The App</a>
                   </div> <!-- .section-content -->
                 </div>
               </div>
@@ -179,8 +179,8 @@
                       <li><img src="{% static 'home/assets/img/icon/pencil.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
                       <li><img src="{% static 'home/assets/img/icon/skull.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
                     </ul>
-                    <a class="btn btn-primary m-y-5" href="index.html#brief_2">Learn More</a>
-                    <a class="btn btn-invert m-y-5" href="index.html#brief_2">More Button</a>
+                    <a class="btn btn-primary m-y-5" href="#brief_2">Learn More</a>
+                    <a class="btn btn-invert m-y-5" href="#brief_2">More Button</a>
                   </div> <!-- .section-content -->
                 </div>
               </div>
@@ -210,8 +210,8 @@
                   <div class="section-content">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in scelerisque nisi, a convallis nibh. Etiam posuere faucibus lectus, quis volutpat urna consequat et. Aenean rutrum dui in turpis feugiat, at facilisis dui laoreet.</p>
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
-                    <a class="btn btn-success m-y-5" href="index.html#brief_3">Learn More</a>
-                    <a class="btn btn-pink m-y-5" href="index.html#brief_3">More Button</a>
+                    <a class="btn btn-success m-y-5" href="#brief_3">Learn More</a>
+                    <a class="btn btn-pink m-y-5" href="#brief_3">More Button</a>
                   </div> <!-- .section-content -->
                 </div>
               </div>
@@ -235,8 +235,8 @@
                       <li><img src="{% static 'home/assets/img/icon/support.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
                       <li><img src="{% static 'home/assets/img/icon/paint.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
                     </ul>
-                    <a class="btn btn-primary m-y-5" href="index.html#pricing">Our Plan</a>
-                    <a class="btn btn-invert m-y-5" href="index.html#pricing">More Button</a>
+                    <a class="btn btn-primary m-y-5" href="#pricing">Our Plan</a>
+                    <a class="btn btn-invert m-y-5" href="#pricing">More Button</a>
                   </div> <!-- .section-content -->
                 </div>
               </div>
@@ -276,7 +276,7 @@
                             </ul>
                           </div>
                           <div class="pricing-table-footer block-light">
-                            <a class="btn btn-primary" href="index.html#download">Download</a>
+                            <a class="btn btn-primary" href="#download">Download</a>
                           </div>
                         </div> <!-- .pricing-table -->
                       </div>
@@ -298,7 +298,7 @@
                             </ul>
                           </div>
                           <div class="pricing-table-footer block-light">
-                            <a class="btn btn-primary" href="index.html#download">Download</a>
+                            <a class="btn btn-primary" href="#download">Download</a>
                           </div>
                         </div> <!-- .pricing-table -->
                       </div>
@@ -317,7 +317,7 @@
                             </ul>
                           </div>
                           <div class="pricing-table-footer block-light">
-                            <a class="btn btn-primary" href="index.html#download">Download</a>
+                            <a class="btn btn-primary" href="#download">Download</a>
                           </div>
                         </div> <!-- .pricing-table -->
                       </div>
@@ -439,7 +439,7 @@
             <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
             <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
           </ul>
-          <p class="site-footer-copyright">2016 © <a href="index.html#" target="_blank">your copyright info</a> | all rights reserved.</p>
+          <p class="site-footer-copyright">2016 © <a href="#" target="_blank">your copyright info</a> | all rights reserved.</p>
         </div>
       </footer> <!-- .site-footer -->
     </div>
