--- a/crewoo/templates/admin/index.html
+++ b/crewoo/templates/admin/index.html
@@ -79,8 +79,8 @@
         <i class="icon md-more" aria-hidden="true"></i>
       </button>
       <div class="navbar-brand navbar-brand-center site-gridmenu-toggle" data-toggle="gridmenu">
-        <img class="navbar-brand-logo" src="/static/admin/assets/images/logo.png" title="Remark">
-        <span class="navbar-brand-text hidden-xs"> Remark</span>
+        <img class="navbar-brand-logo" src="/static/admin/assets/images/logo.png" title="Crewoo">
+        <span class="navbar-brand-text hidden-xs"> Crewoo</span>
       </div>
       <button type="button" class="navbar-toggle collapsed" data-target="#site-navbar-search"
       data-toggle="collapse">
