--- a/crewoo/templates/pages/home.html
+++ b/crewoo/templates/pages/home.html
@@ -89,9 +89,8 @@
               <div class="col-sm-6">
                 <div class="col-inner" data-sr="left">
                   <div class="section-heading">
-                    <h5>Flat Style Landing Page</h5>
-                    <h1>A Flat Style Landing Page For Your App / Product</h1>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
+                    <h5>Bigin With a Better Plan</h5>
+                    <h1>An Intelegent tool to manage your project</h1>
                   </div> <!-- .section-heading -->
                   <div class="section-content">
                     <a class="btn btn-pink m-y-5" href="#about">Learn More</a>
@@ -122,7 +121,7 @@
                       <h3>About App / Product</h3>
                     </div>
                     <div class="icon-box-content">
-                      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+                      <p>A cupiditate non provident.</p>
                     </div>
                   </div>
                 </div>
@@ -135,10 +134,10 @@
                       <img src="{% static 'home/assets/img/icon/crown.png' %}" alt="" data-sr="bottom">
                     </div>
                     <div class="icon-box-heading">
-                      <h3>About App / Product</h3>
+                      <h3>Always choose the right one .</h3>
                     </div>
                     <div class="icon-box-content">
-                      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+                      <p>We will help you to choose the resource for your great task</p>
                     </div>
                   </div>
                 </div>
@@ -151,10 +150,10 @@
                       <img src="{% static 'home/assets/img/icon/diamond.png' %}" alt="" data-sr="bottom">
                     </div>
                     <div class="icon-box-heading">
-                      <h3>About App / Product</h3>
+                      <h3>I always be with you</h3>
                     </div>
                     <div class="icon-box-content">
-                      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+                      <p>We will notify you by emails,sms and realtime notification system for place your next foot step.</p>
                     </div>
                   </div>
                 </div>
