--- a/crewoo/templates/pages/home.html
+++ b/crewoo/templates/pages/home.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>TITLE</title>
+  <title>Crewoo</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="">
@@ -63,10 +63,10 @@
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
                 <li class="active"><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <!-- <li><a href="#about">About</a></li> -->
                 <li><a href="#brief_1">Brief</a></li>
-                <li><a href="#pricing">Pricing</a></li>
-                <li><a href="#download">Download</a></li>
+                <!--<li><a href="#pricing">Pricing</a></li> -->
+                <li><a href="#rida">Rida</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li class="audio-toggle"><a href="#"><i class="fa fa-volume-up"></i></a></li>
               </ul>
@@ -93,8 +93,8 @@
                     <h1>An Intelegent tool to manage your project</h1>
                   </div> <!-- .section-heading -->
                   <div class="section-content">
-                    <a class="btn btn-pink m-y-5" href="#about">Learn More</a>
-                    <a class="btn btn-warning m-y-5" href="#download">Get The App</a>
+                    <a class="btn btn-pink m-y-5" href="#brief_1">Learn More</a>
+                    <a class="btn btn-warning m-y-5" href="#download">Login</a>
                   </div> <!-- .section-content -->
                 </div>
               </div>
@@ -108,6 +108,7 @@
           </div>
         </div> <!-- #home -->
 
+        <!--
         <div id="about" class="section p-a-0 align-c">
           <div class="container-fluid p-x-0">
             <div class="row row-table">
@@ -160,7 +161,7 @@
               </div>
             </div>
           </div>
-        </div> <!-- #about -->
+        </div>  --> <!-- #about -->
 
         <div id="brief_1" class="section block-default align-c-xs-max">
           <div class="container">
@@ -168,15 +169,17 @@
               <div class="col-sm-6">
                 <div class="col-inner">
                   <div class="section-heading">
-                    <h5>Flat Style Landing Page</h5>
-                    <h2>App Brief Section #1</h2>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+                    <!--<h5>Flat Style Landing Page</h5> -->
+                    <h2>Project Management</h2>
+                    <p>Wish you could see the health of your project on one page? </p>
                   </div> <!-- .section-heading -->
                   <div class="section-content">
                     <ul class="icon-list align-l m-t-30">
-                      <li><img src="{% static 'home/assets/img/icon/chat.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
-                      <li><img src="{% static 'home/assets/img/icon/pencil.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
-                      <li><img src="{% static 'home/assets/img/icon/skull.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
+                      <li><img src="{% static 'home/assets/img/icon/chat.png' %}" alt=""> Manage an unlimited number of projects, releases, and iterations</li>
+                      <li><img src="{% static 'home/assets/img/icon/pencil.png' %}" alt=""> Capture user stories, requirements and use cases with size estimates</li>
+                      <li><img src="{% static 'home/assets/img/icon/skull.png' %}" alt=""> Manage resourcing levels to deliver required features</li>
+                      <li><img src="{% static 'home/assets/img/icon/skull.png' %}" alt=""> Centralized document management repositories with versioning and tagging</li>
+                      <li><img src="{% static 'home/assets/img/icon/skull.png' %}" alt=""> Integrated real-time instant messenger and chat capability</li>
                     </ul>
                     <a class="btn btn-primary m-y-5" href="#brief_2">Learn More</a>
                     <a class="btn btn-invert m-y-5" href="#brief_2">More Button</a>
@@ -203,12 +206,11 @@
               <div class="col-sm-6">
                 <div class="col-inner">
                   <div class="section-heading">
-                    <h5>Flat Style Landing Page</h5>
-                    <h2>App Brief Section #2</h2>
+                    <!-- <h5>Flat Style Landing Page</h5> -->
+                    <h2>Planning & Scheduling</h2>
                   </div> <!-- .section-heading -->
                   <div class="section-content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam in scelerisque nisi, a convallis nibh. Etiam posuere faucibus lectus, quis volutpat urna consequat et. Aenean rutrum dui in turpis feugiat, at facilisis dui laoreet.</p>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+                    <p>SpiraPlan lets you easily manage your requirements and user stories in an integrated requirements matrix. These requirements can be validated with the end customer and then elaborated into more detailed tasks that can be used as the basis for development. </p>
                     <a class="btn btn-success m-y-5" href="#brief_3">Learn More</a>
                     <a class="btn btn-pink m-y-5" href="#brief_3">More Button</a>
                   </div> <!-- .section-content -->
@@ -224,15 +226,17 @@
               <div class="col-sm-6">
                 <div class="col-inner">
                   <div class="section-heading">
-                    <h5>Flat Style Landing Page</h5>
-                    <h2>App Brief Section #3</h2>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.</p>
+                    <!-- <h5>Flat Style Landing Page</h5> -->
+                    <h2>Reporting & Tracking</h2>
+                    <p>Bug tracking features include support for customizable workflows and fields, flexible reporting, configurable email notifications, and fully editable statuses, priorities, severities and bug types. </p>
                   </div> <!-- .section-heading -->
                   <div class="section-content">
                     <ul class="icon-list align-l m-t-30">
-                      <li><img src="{% static 'home/assets/img/icon/camera.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
-                      <li><img src="{% static 'home/assets/img/icon/support.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
-                      <li><img src="{% static 'home/assets/img/icon/paint.png' %}" alt=""> Quisque sapien metus, ornare ac suscipit eget.</li>
+                      <li><img src="{% static 'home/assets/img/icon/camera.png' %}" alt=""> Customizable dashboards of key project information.</li>
+                      <li><img src="{% static 'home/assets/img/icon/support.png' %}" alt=""> Flexible and customizable issue-tracking with user-defined workflows.</li>
+                      <li><img src="{% static 'home/assets/img/icon/paint.png' %}" alt=""> Integrated task management with estimation, prioritization and custom workflows.</li>
+                      <li><img src="{% static 'home/assets/img/icon/paint.png' %}" alt=""> Manages your source code repositories and build servers with full code traceability.</li>
+                      <li><img src="{% static 'home/assets/img/icon/paint.png' %}" alt=""> View project velocity, burndown and burnup agile reports.</li>
                     </ul>
                     <a class="btn btn-primary m-y-5" href="#pricing">Our Plan</a>
                     <a class="btn btn-invert m-y-5" href="#pricing">More Button</a>
@@ -248,6 +252,7 @@
           </div>
         </div> <!-- #brief_3 -->
 
+        <!--
         <div id="pricing" class="section block-light align-c">
           <div class="container">
             <div class="row">
@@ -277,7 +282,7 @@
                           <div class="pricing-table-footer block-light">
                             <a class="btn btn-primary" href="#download">Download</a>
                           </div>
-                        </div> <!-- .pricing-table -->
+                        </div> 
                       </div>
                       <div class="col-xs-12 col-sm-4">
                         <div class="pricing-table">
@@ -299,7 +304,7 @@
                           <div class="pricing-table-footer block-light">
                             <a class="btn btn-primary" href="#download">Download</a>
                           </div>
-                        </div> <!-- .pricing-table -->
+                        </div> 
                       </div>
                       <div class="col-xs-12 col-sm-4">
                         <div class="pricing-table">
@@ -326,17 +331,18 @@
               </div>
             </div>
           </div>
-        </div> <!-- #download -->
+        </div> --> <!-- #download -->
 
-        <div id="download" class="section block-primary align-c">
+        <div id="rida" class="section block-primary align-c">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
                 <div class="col-inner">
                   <div class="section-heading">
-                    <h5>Download Available</h5>
-                    <h2>Get It Right Now!</h2>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
+                    <!-- <h5></h5> -->
+                    <img style="width: 10%;" src="{% static 'home/assets/img/rida.png' %}"  >
+                    <h2>I'm Rida !</h2>
+                    <p>I like to help you anytime unconditionally.</p>
                   </div>
                   <div class="section-content">
                     <a class="btn btn-pink m-y-5"><i class="fa fa-android"></i>Google Play</a>
@@ -366,9 +372,9 @@
                       <h4>Phone Number</h4>
                     </div>
                     <div class="icon-box-content font-sub font-italic">
-                      <span>(00) 123-4567890 (tel-1)</span>
+                      <span>+91-9746606219</span>
                       <br>
-                      <span>(00) 123-4567890 (tel-2)</span>
+                      <span>+91-9746606219</span>
                     </div>
                   </div>
 
@@ -434,11 +440,9 @@
           <ul class="site-footer-social-list">
             <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
             <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
-            <li><a href="https://instagram.com/" target="_blank">Instagram</a></li>
             <li><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
           </ul>
-          <p class="site-footer-copyright">2016 © <a href="#" target="_blank">your copyright info</a> | all rights reserved.</p>
+          <p class="site-footer-copyright">2016 © <a href="#" target="_blank">Crewoo</a> | all rights reserved.</p>
         </div>
       </footer> <!-- .site-footer -->
     </div>
